# dendrites

./: .gitignore  AGENTS.md  Cargo.toml  README.md  clean_cozo.py  dendrites.json  do_patch.py  fix_again.py  fix_compiler_errors.py  fix_cozo_again.py  fix_cozo_dup.py  fix_cozo_syntax.py  fix_cozo_tests.py  fix_lines.py  fix_polyglot.py  fix_test_final.py  fix_test_perfect.py  fix_tests.py  make_clean_patch.py  output.txt  patch_bounded_context.py  patch_cozo_crud.py  patch_cozo_schema.py  patch_domain_model.py  patch_provenance.py  patch_schema.py  patch_tools.py  patch_tools_2.py  patch_tools_3.py  rm_fns.py  strict_patch_cozo.py  test_out.txt  the_ultimate_patch.py
.dendrites/: store.db
.github/workflows/: ci.yml
Formula/: dendrites.rb
src/: lib.rs  main.rs
src/domain/: analyze.rs  mod.rs  model.rs  polyglot.rs  registry.rs  rust_syn.rs  scanner.rs
src/mcp/: prompts.rs  resources.rs  tools.rs  write_tools.rs
src/server/: mod.rs  stdio.rs  watcher.rs
src/store/: cozo.rs  mod.rs
tests/: datalog_rules.rs  reasoning_integration.rs  self_integration.rs
